# paramax_py39

./: LICENSE  README.md  pyproject.toml
docs/: conf.py  getting_started.rst  index.rst
paramax/: utils.py  wrappers.py
paramax_py39/: wrappers.py
tests/: test_utils.py  test_wrappers.py
