[project]
authors = [{ name = "Joshua Chen", email = "joshuawchen@icloud.com" }]
classifiers = [
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Natural Language :: English",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Scientific/Engineering :: Information Analysis",
  "Topic :: Scientific/Engineering :: Mathematics",
  "Typing :: Typed",
]
dependencies = ["jax", "equinox", "jaxtyping"]
description = "Parameterizations and parameter constraints for JAX PyTrees, forked for Python 3.9 compatability."
keywords = ["jax", "neural-networks", "equinox"]
license = { file = "LICENSE" }
name = "paramax_py39"
readme = "README.md"
requires-python = ">=3.9"
version = "0.0.3.1"

[project.urls]
repository = "https://github.com/joshuawchen/paramax_py39"

[project.optional-dependencies]
dev = [
  "pytest",
  "beartype",
  "ruff",
  "sphinx",
  "sphinx-book-theme",
  "sphinx-copybutton",
  "sphinx-autodoc-typehints",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "--jaxtyping-packages=paramax,beartype.beartype(conf=beartype.BeartypeConf(strategy=beartype.BeartypeStrategy.On))"

[tool.ruff]
include = ["*.py", "*.pyi", "**/pyproject.toml", "*.ipynb"]

[tool.ruff.lint]
select = ["E", "F", "B", "D", "COM", "I", "UP", "TRY004", "RET", "PT", "FBT"]
ignore = ["D102", "D105", "D107", "B028", "COM812", "F722"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D"]
"*.ipynb" = ["D"]
"__init__.py" = ["D"]
